fix for hide config panel on scroll